# TextGuardAI

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
app/: main.py  schemas.py
app/api/: __init__.py  routes.py  schemas.py
application/: __init__.py  interfaces.py  services.py  use_cases.py
configs/: config.py  configs.yml
domain/: __init__.py  entities.py  repositories.py  value_objects.py
infrastructure/: __init__.py  celery_app.py  database.py  dependency_injection.py  http_clients.py  models.py  repositories.py  tasks.py
migrations/: env.py
model/: inference.py  train.py
scripts/: init_db.sh  run_celery_beat.sh  run_celery_worker.sh
